<resources>
    <string name="app_name">KitchenStoryOwner</string>
    <string name="your_location">Your location</string>
    <string name="what_would_you_like_to_eat">What would you like to eat?</string>
    <string name="choose_from_cuisines">Choose from cuisines</string>
    <string name="see_all">See all</string>
    <string name="discounts_are_available">Discounts are available</string>
    <string name="our_recommended">Our Recommended</string>
    <string name="search">Search</string>
    <string name="your_search_history">Your search history</string>
    <string name="promo">Promo</string>
    <string name="your_available_promo">Your Available Promo</string>
    <string name="arrow_down">arrow down</string>
    <string name="favorite">favorite</string>
    <string name="discount">Discount</string>
    <string name="arrow_right">arrow_right</string>
    <string name="home">Home</string>
    <string-array name="bank_array">

        <item>BCA</item>
        <item>Mandiri</item>
        <item>BNI</item>
        <item>BRI</item>
        <item>Cimb Niaga</item>
        <item>Jenius</item>

    </string-array>
    <string name="profile">Profile</string>
    <string name="kitchen_name">Kitchen Name</string>
    <string name="category">Category</string>
    <string name="ratings">Ratings</string>
    <string name="distance">Distance</string>
    <string name="taste">Taste</string>
    <string name="money">Money</string>
    <string name="back">Back</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="search_food_that_you_want">Search food that you want</string>
    <string name="logo">Logo</string>
    <string name="star">Star</string>
    <string name="location">Location</string>
    <string name="like">Like</string>
    <string name="person_name">Person Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="order">Order</string>
    <string name="voucher">Voucher</string>
    <string name="promo_code">Promo Code</string>
    <string name="language">Language</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="other">Other</string>
    <string name="edit">Edit</string>
    <string name="food">Food</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="select_photo">Select Photo</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="birthday_date">Birthday Date</string>
    <string name="gender">Gender</string>
    <string name="nearest">Nearest</string>
    <string name="best_seller">Best Seller</string>
    <string name="saving_money">Saving Money</string>
    <string name="thrifty">Thrifty</string>
    <string name="newest">Newest</string>
    <string name="_24_hour">24 Hour</string>
    <string name="recommended_restaurant_near_you">Recommended restaurant near you</string>
    <string name="welcome_to_kitchen_story">Welcome to Kitchen Story</string>
    <string name="input_phone_number">Input Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="item">Item</string>
    <string name="restaurant">Restaurant</string>
    <string name="price">Price</string>
    <string name="report_menu_that_not_accurate">Report menu that not accurate</string>
    <string name="custom_order">Custom Order</string>
    <string name="menu">Menu</string>
    <string name="note">Note</string>
    <string name="optional">Optional</string>
    <string name="example_not_spicy">Example: Not Spicy</string>
    <string name="total_order">Total Order</string>
    <string name="_0">0</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_continue">Continue</string>
    <string name="login">Login</string>
    <string name="input_password_to_continue">Input password to continue</string>
    <string name="password">Password</string>
    <string name="verification_code_has_been_sent">Verification code has been sent!</string>
    <string name="enter_the_verification_code_that_we_sent_to_your_phone_number">Enter the verification code that we sent to your phone number</string>
    <string name="you_can_resend_verification_after">You can resend verification after</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend">Resend</string>
    <string name="change">Change</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_address">Delivery address</string>
    <string name="detail_address">Detail Address</string>
    <string name="add_more">Add More</string>
    <string name="want_add_more_item">Want add more item?</string>
    <string name="discount_are_applied">Discount are applied</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="take_away_fee">Take away fee</string>
    <string name="total_payment">Total Payment</string>
    <string name="detail_payment">Detail Payment</string>
    <string name="ewallet">Ewallet</string>
    <string name="title_activity_delivery">Map</string>
    <string name="how_s_your_order">How\'s your order?</string>
    <string name="date_order">Date Order</string>
    <string name="give_comment">Give Comment</string>
    <string name="example_nice_food">Example: Nice Food!</string>
    <string name="send">Send</string>
    <string name="pickup_order">Pickup order</string>
    <string name="estimation_time">Estimation time</string>
    <string name="number_plate">Number plate</string>
    <string name="driver_name">Driver name</string>
    <string name="pick_up">Pick Up</string>
    <string name="explore">Explore</string>
    <string name="have_promo_code">Have promo code?</string>
    <string name="insert_your_promo_code_here">Insert your promo code here.</string>
    <string name="validate">Validate</string>
    <string name="what_s_the_problem_with_your_last_order">What\'s the problem with your last order?</string>
    <string name="history_order">History Order</string>
    <string name="all_topic">All Topic</string>
    <string name="search_topic">Search Topic</string>
    <string name="english_en">English(EN)</string>
    <string name="add_address">Add Address</string>
    <string name="important_update">Important Update</string>
    <string name="contains_updates_about_orders_trips_transactions_and_account_info_must_stay_enabled">Contains updates about orders, trips, transactions, and account info. Must stay enabled.</string>
    <string name="promo_and_other">Promo and other</string>
    <string name="turn_off_notifications_about_vouchers_promos_and_recommendations_you_can_check_the_update_on_the_promo_page">Turn off notifications about vouchers, promos, and recommendations. You can check the update on the promo page</string>
    <string name="send_message">Send Message</string>
    <string name="edittext_empty_error">This field cannot be empty</string>
    <string name="phone_number_less_than_13">Your phone number must not less than 13 digit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="brand_name">Brand Name</string>
    <string name="kitchen_information">Kitchen Information</string>
    <string name="input_detail_information_about_your_restaurant">Input detail information about your restaurant</string>
    <string name="owner_identity">Owner identity</string>
    <string name="input_your_id_card_number_name_address_according_to_id_card">Input your ID card number, name, address according to ID card</string>
    <string name="account_information">Account Information</string>
    <string name="enter_bank_name_and_number_your_business_account">Enter bank name and number your business account</string>
    <string name="you_have_understood_and_agreed_that_on_the_kitchen_story_service">You have understood and agreed that on the Kitchen Story service:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat laoreet tristique tortor suscipit tellus pulvinar orci. Nulla amet, varius bibendum viverra sed in. Sed fermentum eu potenti sit. Felis sem neque nisl scelerisque ultricies viverra.</string>
    <string name="read_more">Read more</string>
    <string name="i_agree_to_the_terms_and_kitchen_story_terms">I agree to the terms and Kitchen Story terms</string>
    <string name="your_data_is_being_processed">Your data is being processed</string>
    <string name="we_process_within_1_2_days_please_patiently_wait_for_it">We process within 1-2 days. Please patiently wait for it</string>
    <string name="check_status">Check Status</string>
    <string name="to_start_selling_on_kitchen_story_complete_your_kitchen_data_below_ok">To start selling on Kitchen Story, Complete your kitchen data below, OK?</string>
    <string name="business_data">Business data</string>
    <string name="already_filled">Already filled</string>
    <string name="operational_hour">Operational hour</string>
    <string name="fill_in_at_least_1_day_open">Fill in at least 1 day open</string>
    <string name="menu_kitchen">Menu Kitchen</string>
    <string name="fill_in_at_least_1_category_1_active_menu"><![CDATA[Fill in at least 1 category & 1 active menu]]></string>
    <string name="profile_kitchen">Profile Kitchen</string>
    <string name="activated">Activated</string>
    <string name="location_benchmark">Location benchmark</string>
    <string name="example_street_name_building_foodcourt">Example: street name, building, foodcourt</string>
    <string name="upload_photo_id">Upload photo ID</string>
    <string name="upload">Upload</string>
    <string name="number_id">Number ID</string>
    <string name="name_according_to_id_card">Name according to ID card</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account number</string>
    <string name="account_name">Account name</string>
    <string name="your_data_is_rejected">Your data is rejected</string>
    <string name="calm_down_don_t_worry_you_can_change_and_reapply_press_the_button_below_to_check_again_your_data_and_see_what_needs_to_be_revised">Calm down, don\'t worry you can change and reapply. Press the button below to check again your data and see what needs to be revised</string>
    <string name="check_data">Check Data</string>
    <string name="congratulations_your_data_is_approved">Congratulations! Your data is approved!</string>
    <string name="let_s_go_ahead_and_start_selling_with_kitchen_story">Let\'s go ahead and start selling with Kitchen Story!</string>
    <string name="set_your_kitchen_operating_hours">Set your kitchen operating hours</string>
    <string name="you_must_be_open_at_least_3_days_a_week_with_a_minimum_of_3_hours_per_day">You must be open at least 3 days a week, with a minimum of 3 hours per day</string>
    <string name="monday">Monday</string>
    <string name="close">(Close)</string>
    <string name="add_your_restaurant_menu_here">Add your restaurant menu here</string>
    <string name="add_categories_first_then_the_menus_one_by_one">Add categories first, then the menus one by one</string>
    <string name="add">Add</string>
    <string name="food_category">Food category</string>
    <string name="add_your_food_category_so_customers_can_easily_find_your_kitchen">Add your food category so customers can easily find your kitchen!</string>
    <string name="photo_profile_kitchen">Photo Profile Kitchen</string>
    <string name="activate_in_kitchen_story">Activate in Kitchen Story</string>
    <string name="the_menu_category_that_will_appear_in_kitchen_story">The menu category that will appear in Kitchen Story</string>
</resources>